# WebChat-FastAPI

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schema.py
backend/app/controller/: chat.py  users.py
backend/app/model/: users.py
backend/app/repository/: users.py
backend/app/service/: auth_service.py  users.py
backend/migrations/versions/: dfc15383fa82_initial_migration.py
frontend/src/: App.css  Home.js
frontend/src/form/: Forgot.js  Login.js  Register.js
